--- a/index.html
+++ b/index.html
@@ -58,6 +58,28 @@
                         <a class="logo-link" href="#"><img src="svg/noemi-logo.svg" class="header-logo" alt="logo brand"></a>
                     </div>
                     <!-- Navigation -->
+                    <div class="full-nav">
+                        <ul class="nav">
+                            <li class="nav-item">
+                                <a class="nav-item-text" href="#section-main">главная</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-item-text" href="#section-posts">посты</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-item-text" href="#section-articles">статьи</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-item-text" href="#section-tags">теги</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-item-text" href="#section-topics">темы</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-item-text" href="#section-contacts">контакты</a>
+                            </li>
+                        </ul>
+                    </div>    
                     <div class="nav-container">
                         <!-- Burger menu for mobile -->
                         <div class="burger-menu"></div>
@@ -87,7 +109,7 @@
                                 </li>
                             </ul>
                         </div>
-                    </nav>
+                    </div>
                 </div>
                 <!-- Navigation End-->
                 <div class="header-title-container" id="section-main">
@@ -437,9 +459,13 @@
                     <h2 class="store-card-title">Подушки на диван</h2>
                     <p class="store-card-par">Набор из двух подушек с модными принтами. Видео о содании<a class="store-link" href="#"> здесь.</a></p>
                     <div class="store-price-container">
-                        <p class="sale-price">800 ₽</p>
-                        <p class="full-price">1000 ₽</p>
-                        <button class="store-button" type="button">В магазин</button>
+                        <div class="price">
+                            <p class="sale-price">800 ₽</p>
+                            <p class="full-price">1000 ₽</p>
+                        </div>
+                        <div>
+                            <a href="index.html" class="store-button" type="button">В магазин</a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -454,8 +480,12 @@
                     <h2 class="store-card-title">Кукла "Зайчик"</h2>
                     <p class="store-card-par">Интерьерная рукодельная кукла «Зайчик», созданию которой посвящена <a class="store-link" href="#">весенняя серия постов</a> в блоге и несколько подкастов.</p>
                     <div class="store-price-container">
-                        <p class="sale-price">3500 ₽</p>
-                        <button class="store-button" type="button">В магазин</button>
+                        <div class="price">
+                            <p class="sale-price">3500 ₽</p>
+                        </div>
+                        <div>
+                            <a href="index.html" class="store-button" type="button">В магазин</a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -470,9 +500,13 @@
                     <h2 class="store-card-title">Шестиугольная рамка</h2>
                     <p class="store-card-par">Необычная рамка для украшения дома из видео <a class="store-link" href="#">«Как сделать рамку из подручных средств за 30 минут»</a></p>
                     <div class="store-price-container">
-                        <p class="sale-price">400 ₽</p>
-                        <p class="full-price">500 ₽</p>
-                        <button class="store-button" type="button">В магазин</button>
+                        <div class="price">
+                            <p class="sale-price">400 ₽</p>
+                            <p class="full-price">500 ₽</p>
+                        </div>
+                        <div>
+                            <a href="index.html" class="store-button" type="button">В магазин</a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -483,9 +517,9 @@
     <footer class="footer" id="section-contacts">
         <div class="footer-content">
             <div class="social-icon-container">
-                <a href="#" class="social-icon-item dribbble"><span class="visually-hidden">Dribbble account</span></a>
-                <a href="#" class="social-icon-item pinterest"><span class="visually-hidden">Pinterest account</span></a>
-                <a href="#" class="social-icon-item tumblr"><span class="visually-hidden">Tumblr account</span></a>
+                <a href="https://dribbble.com/" class="social-icon-item dribbble"><span class="visually-hidden">Dribbble account</span></a>
+                <a href="https://ru.pinterest.com/" class="social-icon-item pinterest"><span class="visually-hidden">Pinterest account</span></a>
+                <a href="https://www.tumblr.com/explore/trending?source=homepage_explore" class="social-icon-item tumblr"><span class="visually-hidden">Tumblr account</span></a>
             </div>
         </div>
         <div class="copyright">
