--- a/index.html
+++ b/index.html
@@ -113,7 +113,9 @@
                 </div>
                 <!-- Navigation End-->
                 <div class="header-title-container" id="section-main">
-                    <h1 class="header-title">Блог отворчестве, спорте, <br> и образе жизни</h1>
+                    <h1 class="header-title">
+                        <a class="logo-link-mobile" href="#"><img src="svg/noemi-logo.svg" class="header-logo-link-mobile" alt="logo brand mobile"></a>
+                        Блог отворчестве, спорте, и образе жизни</h1>
                 </div>
             </div>
         </div>
